# todolist

./: .gitignore  1.todolist.bundle.js  Cargo.toml  index.html  main.js  package.json  todolist.bundle.js  webpack.config.js
.github/workflows/: deploy-to-github-pages.yml
config/: webpack.config.js  webpack.prod.config.js
graphql/: all_films.graphql
js/: index.html  index.js  main.js
src/: lib.rs  page.rs  prelude.rs  route.rs
src/bridge/: mod.rs  sw_api_graphql.rs
src/model/: mod.rs  sw.rs
src/page/: home.rs  homepage.rs  list.rs  not_found.rs  sw_api.rs
