[package]
name = "appname"
version = "0.1.0"
authors = ["Your Name <email@address.com>"]
edition = "2018"


[lib]
crate-type = ["cdylib"]


[dependencies]
seed = "^0.7.0"
wasm-bindgen = "^0.2.58"
web-sys = "0.3"
serde = { version = "^1.0.85", features = ['derive'] }
futures = "^0.1.26"
uuid = { version = "0.8.1", features = ["serde", "v4", "wasm-bindgen"] }


[dev-dependencies]
wasm-bindgen-test = "0.2.50" # NOTE: keep in sync with wasm-bindgen version


[profile.release]  # Attempts to minimize file size
lto = true
opt-level = 'z'
